manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-ui
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
      - name: todo-ui
        image: shivams65/myapp
        resources:
        ports:
        - containerPort: 80
