manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-ui-service
spec:
  type: LoadBalancer
  selector:
    app: todo-ui
  ports:
  - port: 80
    targetPort: 80
